Refs #75109; Updated with the following changes:
- Added bypass for in date range comparison for envelopes that do not
  have a status.
- Renamed archived_files to archivedFiles for consistency
- Added fileSize and fileSizeHR (human readable format) for
  file entries
