# Products/Reportek/docs/api/swagger_api.yaml
@@ -223,13 +223,15 @@ paths:
               envelopes:
                 - files:
                     - title: My Envelope file
-                      archived_files:
+                      archivedFiles:
                         - File1.xml
                         - File2.xml
                       contentType: application/xml
                       uploadDate: 2013-04-12T23:20:50.52Z
                       url: http://foo/bar/my_envelope/my_envelope_file.xml
                       schemaURL: http://foo/bar/schema.xsd
+                      fileSize: 3679181
+                      fileSizeHR: 3.51 MB
                   periodEndYear: 2014
                   status: Release
                   countryCode: RO
@@ -343,7 +345,13 @@ definitions:
       schemaURL:
         type: string
         description: The URL of the file's schema.
-      archived_files:
+      fileSize:
+        type: integer
+        description: The size of the file in bytes
+      fileSizeHR:
+        type: string
+        description: The size of the file in human readable format.
+      archivedFiles:
         type: array
         description: >-
           The list of files that have been archived. Available only if there is
